is_component_build=false
v8_static_library=true
symbol_level=0
v8_symbol_level=0
v8_enable_i18n_support=false
v8_use_external_startup_data=false
v8_monolithic=true
v8_enable_handle_zapping=false
v8_enable_pointer_compression=false
v8_enable_31bit_smis_on_64bit_arch=false
v8_enable_snapshot_compression=false
